XO_Project_UAT/Project--XOGrp--UAT/src/objects/Zuora__Product__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Mirror category field of Zproduct</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Tier__c</fullName>
        <label>Fulfillment Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <label>Fulfillment</label>
        <picklist>
            <picklistValues>
                <fullName>Storefront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdPlacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Description__c</fullName>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__SKU__c</fullName>
        <label>SKU</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>Main</fullName>
        <columns>NAME</columns>
        <columns>ProductType__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Zuora__SKU__c</columns>
        <columns>Zuora__External_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Main</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>